test/analyze/type_check/variable_declaration/cannot_infer_type_error.myte
module test

import std.ops.Equatable

type Option<T> =
  | None
  | Some (T)

type ManyTParams<T, U, V> =
  | EnumVariant
  | OtherVariant (T)

fun useTraitBound<T: Equatable>(x: Vec<T>): Vec<T> = x

fun useTraitBoundWithTVar<T: Equatable, U, V>(x: ManyTParams<T, U, V>): ManyTParams<T, U, V> = x

fun main() {
  val x = None;
  val x = EnumVariant;

  val x = useTraitBound([]);
  val x = useTraitBoundWithTVar(EnumVariant);
}